--- a/src/App.css
+++ b/src/App.css
@@ -31,8 +31,8 @@ input[type="number"] {
 }
 
 button {
-  background-color: #0074d9;
-  color: #fff;
+  background-color: #000;
+  color: #000;
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
@@ -41,6 +41,7 @@ button {
 
 button:hover {
   background-color: #0056b3;
+  color: #fff;
 }
 
 p {
